@@ -384,6 +384,10 @@ query_t config_t::poolToBuilder() const {
 
 bool config_t::updateEndpoint(std::string const& id, std::string const& ep) {
   WRITE_LOCKER(readLocker, _lock);
+  auto it = _pool.find(id);
+  if (it == _pool.end() && _pool.size() == _agencySize) {
+    return false;
+  }
   if (_pool[id] != ep) {
     _pool[id] = ep;
     ++_version;
